src/test/deca/context/invalid/whileIncompatible.deca
// Description:
//    condition de while
//
// Resultats:
//    Ligne 10: la condition doit être booléen.
// 
// Historique:
//    cree le 13/01/2023
{
	while(0){
	}
}
